--- a/src/app/pages/modalidad/components/tables/table-modalidad/table-modalidad.component.html
+++ b/src/app/pages/modalidad/components/tables/table-modalidad/table-modalidad.component.html
@@ -13,9 +13,8 @@
             <i class="fas fa-sync-alt"></i>
           </button>
           <button
-            class="btn btn-sm btn-head me-3"
+            class="btn btn-sm btn-head btn-head-table me-3"
             [disabled]="isLoading"
-            ngbTooltip="Crear una inscripción"
             (click)="openCreateEnrollmentFormModal()"
           >
             <i class="fa-solid fa-circle-plus"></i> Nueva Inscripción
@@ -39,18 +38,38 @@
                 <th>Fecha de Creación</th>
               </tr>
             </thead>
+            <tbody *ngIf="isLoading">
+              <tr>
+                <td colspan="9" class="text-center">
+                  <div class="loader-box">
+                    <div class="loader-16"></div>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
             <tbody *ngIf="!isLoading && enrollments.length > 0">
               <tr *ngFor="let item of enrollments; trackBy: trackByEnrollmentId">
                 <td>
-                  <button
-                    class="btn btn-sm btn-light mt-2"
-                    style="padding: 0.375rem 0.9rem"
-                    ngbTooltip="Editar"
-                    tooltipClass="custom-tooltip"
-                    (click)="openEditEnrollmentFormModal(item)"
-                  >
-                    <i class="fa-solid fa-pen-to-square"></i>
-                  </button>
+                  <div class="btn-group">
+                    <button
+                      class="btn btn-sm mt-2 btn-light"
+                      style="padding: 0.375rem 0.9rem"
+                      ngbTooltip="Ver Información"
+                      tooltipClass="custom-tooltip"
+                      (click)="openViewEnrollmentModal(item)"
+                    >
+                      <i class="fa-solid fa-eye"></i>
+                    </button>
+                    <button
+                      class="btn btn-sm btn-success mt-2"
+                      style="padding: 0.375rem 0.9rem"
+                      ngbTooltip="Editar"
+                      tooltipClass="custom-tooltip"
+                      (click)="openEditEnrollmentFormModal(item)"
+                    >
+                      <i class="fa-solid fa-pen-to-square"></i>
+                    </button>
+                  </div>
                 </td>
                 <td>{{ item.modalityName }}</td>
                 <td>{{ item.topicTitle || 'N/A' }}</td>
@@ -60,15 +79,6 @@
                 <td>{{ item.createdByName }}</td>
                 <td>{{ item.partnerName }}</td>
                 <td>{{ item.createdAt | date: 'short' }}</td>
-              </tr>
-            </tbody>
-            <tbody *ngIf="isLoading">
-              <tr>
-                <td colspan="9" class="text-center">
-                  <div class="loader-box">
-                    <div class="loader-16"></div>
-                  </div>
-                </td>
               </tr>
             </tbody>
             <tbody *ngIf="!isLoading && enrollments.length === 0">
