disminucion de pixeles del logo porque empuja el sidebar

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,9 @@
 <!-- Page Sidebar Start-->
 <div class="logo-wrapper">
   <a routerLink="/">
-    <img class="img-fluid for-light" src="assets/images/logo/logo_negro.png" alt="" />
-    <img class="img-fluid for-dark" src="assets/images/logo/logo_blanco.png" alt="" />
+    <!-- Limitar el tamaño de la imagen usando CSS directamente en el elemento img -->
+    <img class="img-fluid for-light logo-image" src="assets/images/logo/logo_negro.png" alt="" />
+    <img class="img-fluid for-dark logo-image" src="assets/images/logo/logo_blanco.png" alt="" />
   </a>
   <div class="back-btn" (click)="sidebarToggle()">
     <i class="fa fa-angle-left"></i>
