--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,19 @@
 .btn-light {
   padding: 0.375rem 0.9rem;
 }
+
+// color en grupal e individual
+
+.status-badge {
+  border-radius: 5px;
+  color: #fff;
+  padding: 0.25rem 0.5rem;
+}
+
+.development-grupal {
+  background-color: #1b94da;
+}
+
+.development-individual {
+  background-color: #da3bda;
+}
