--- a/src/app/pages/group/components/tables/table-group/table-group.component.html
+++ b/src/app/pages/group/components/tables/table-group/table-group.component.html
@@ -1,47 +1,46 @@
+<!-- table-group.component.html -->
 <div class="container-fluid basic_table">
-  <div class="row">
-    <div class="card">
-      <div class="card-header">
-        <div class="text-end">
-          <button
-            class="btn btn-sm btn-refresh me-3"
-            [disabled]="isLoading"
-            ngbTooltip="Recargar Tabla"
-            tooltipClass="custom-tooltip"
-            (click)="reloadTable()"
-          >
-            <i class="fas fa-sync-alt"></i>
-          </button>
-        </div>
+  <!-- Tabla de grupos -->
+  <div class="card">
+    <div class="card-header">
+      <div class="text-end">
+        <button
+          class="btn btn-sm btn-refresh me-3"
+          [disabled]="isLoading"
+          ngbTooltip="Recargar Tabla"
+          tooltipClass="custom-tooltip"
+          (click)="reloadTable()"
+        >
+          <i class="fas fa-sync-alt"></i>
+        </button>
       </div>
+    </div>
 
-      <div class="card-body custom-datatable noscroll">
-        <div class="table-responsive signal-table custom-datatable">
-          <table class="table table-hover table-responsive uppercase-table">
-            <thead>
-              <tr>
-                <th>Acciones</th>
-                <th>Miembros</th>
-                <th>Modalidad</th>
-                <th>Mecanismo de Desarrollo</th>
-                <th>Título del Tema</th>
-                <th>Tutores Elegidos</th>
-                <th>Creado En</th>
-              </tr>
-            </thead>
-            <tbody *ngIf="!isLoading && groups.length > 0">
-              <tr *ngFor="let item of groups; trackBy: trackByGroupId">
-                <td>
-                  <div class="btn-group">
-                    <button
-                      class="btn btn-sm mt-2 btn-light"
-                      style="padding: 0.375rem 0.9rem"
-                      ngbTooltip="Ver Información"
-                      tooltipClass="custom-tooltip"
-                      (click)="openViewGroupModal(item)"
-                    >
-                      <i class="fa-solid fa-eye"></i>
-                    </button>
+    <div class="card-body custom-datatable noscroll">
+      <div class="table-responsive signal-table custom-datatable">
+        <table class="table table-hover table-responsive uppercase-table">
+          <thead>
+            <tr>
+              <th>Acciones</th>
+              <th>Miembros</th>
+              <th>Modalidad</th>
+              <th>Mecanismo de Desarrollo</th>
+              <th>Título del Tema</th>
+              <th>Tutores Elegidos</th>
+              <th>Creado En</th>
+            </tr>
+          </thead>
+          <tbody *ngIf="!isLoading && groups.length > 0">
+            <tr *ngFor="let item of groups; trackBy: trackByGroupId">
+              <td>
+                <div class="btn-group">
+                  <button
+                    class="btn btn-sm mt-2 btn-light"
+                    style="padding: 0.375rem 0.9rem"
+                    ngbTooltip="Ver Información"
+                    tooltipClass="custom-tooltip"
+                    (click)="openViewGroupModal(item)"
+                  >
                     <!-- <button
                       class="btn btn-sm btn-light mt-2"
                       style="padding: 0.375rem 0.5rem"
@@ -51,56 +50,57 @@
                     >
                       <i class="fa-solid fa-pen-to-square"></i>
                     </button> -->
-                  </div>
-                </td>
-                <td>{{ item.membersNames }}</td>
-                <td>{{ item.modalityName }}</td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span
-                      [ngClass]="
-                        getDevelopmentMechanismClass(
-                          item.developmentMechanismName
-                        )
-                      "
-                      class="status-badge"
-                    >
-                      {{ item.developmentMechanismName }}
-                    </span>
-                  </div>
-                </td>
-                <td ellipsisOverflow>{{ item.topicTitle || "N/A" }}</td>
-                <td>{{ item.preferredTutorsNames }}</td>
-                <td>{{ item.createdAt | date : "short" }}</td>
-              </tr>
-            </tbody>
-            <tbody *ngIf="isLoading">
-              <tr>
-                <td colspan="7" class="text-center">
-                  <div class="loader-box">
-                    <div class="loader-16"></div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-            <tbody *ngIf="!isLoading && groups.length === 0">
-              <tr>
-                <td colspan="7" class="text-center">
-                  No hay grupos disponibles.
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+                    <i class="fa-solid fa-eye"></i>
+                  </button>
+                </div>
+              </td>
+              <td>{{ item.membersNames }}</td>
+              <td>{{ item.modalityName }}</td>
+              <td>
+                <div class="d-flex align-items-center">
+                  <span
+                    [ngClass]="
+                      getDevelopmentMechanismClass(
+                        item.developmentMechanismName
+                      )
+                    "
+                    class="status-badge"
+                  >
+                    {{ item.developmentMechanismName }}
+                  </span>
+                </div>
+              </td>
+              <td ellipsisOverflow>{{ item.topicTitle || "N/A" }}</td>
+              <td>{{ item.preferredTutorsNames }}</td>
+              <td>{{ item.createdAt | date : "short" }}</td>
+            </tr>
+          </tbody>
+          <tbody *ngIf="isLoading">
+            <tr>
+              <td colspan="7" class="text-center">
+                <div class="loader-box">
+                  <div class="loader-16"></div>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+          <tbody *ngIf="!isLoading && groups.length === 0">
+            <tr>
+              <td colspan="7" class="text-center">
+                No hay grupos disponibles.
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+    </div>
 
-      <div class="card-footer">
-        <shared-custom-pagination
-          [collectionSize]="collectionSize"
-          (pageChange)="onPageChange($event)"
-          (pageSizeChange)="onLimitChange($event)"
-        ></shared-custom-pagination>
-      </div>
+    <div class="card-footer">
+      <shared-custom-pagination
+        [collectionSize]="collectionSize"
+        (pageChange)="onPageChange($event)"
+        (pageSizeChange)="onLimitChange($event)"
+      ></shared-custom-pagination>
     </div>
   </div>
 </div>
