--- a/src/app/pages/group/pages/page-group/page-group.component.html
+++ b/src/app/pages/group/pages/page-group/page-group.component.html
@@ -5,7 +5,7 @@
           <div class="row mt-3">
             <div class="col-12">
               <div class="mb-sm-0">
-                <!-- <app-filter-ejemplo></app-filter-ejemplo> -->
+                <app-filter-group></app-filter-group>
                 <br />
               </div>
             </div>
