--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 footer-copyright text-center">
-      <p class="mb-0">Copyright {{ today | date:'y'}} © Sistema de los Rocky Linux Fabricio </p>
+      <p class="mb-0">Copyright {{ today | date:'y'}} © Sistema de los Rocky Linux - Byron y su ayudante Fabricio</p>
     </div>
   </div>
 </div>
