--- a/src/app/pages/management-topic/pages/management-topic/management-topic.component.html
+++ b/src/app/pages/management-topic/pages/management-topic/management-topic.component.html
@@ -1,4 +1,17 @@
-<div class="container">
-  <app-filter-management-topic></app-filter-management-topic>
-  <app-table-management-topic></app-table-management-topic>
+<div class="container-fluid basic_table">
+  <div class="row">
+    <div class="col-xxl-12 col-xl-12 box-cSol-12">
+      <div class="col-sm-12">
+        <div class="row mt-3">
+          <div class="col-12">
+            <div class="mb-sm-0">
+              <app-filter-management-topic></app-filter-management-topic>
+              <br />
+            </div>
+          </div>
+        </div>
+        <app-table-management-topic></app-table-management-topic>
+      </div>
+    </div>
+  </div>
 </div>
