--- a/src/app/pages/modalidad/components/tables/table-modalidad/table-modalidad.component.scss
+++ b/src/app/pages/modalidad/components/tables/table-modalidad/table-modalidad.component.scss
@@ -17,3 +17,18 @@
 //     border-radius: 4px;
 //   }
   
+.group-status-badge {
+    padding: 0.25em 0.5em;
+    border-radius: 0.25em;
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .group-formed {
+    background-color: #28a745; // Verde para grupo formado o individual
+  }
+  
+  .group-pending {
+    background-color: #ffc107; // Amarillo para pendiente
+  }
+  
