--- a/src/app/pages/management-tutor/pages/management-tutor/management-tutor.component.html
+++ b/src/app/pages/management-tutor/pages/management-tutor/management-tutor.component.html
@@ -1,2 +1,24 @@
-<app-filter-management-tutor></app-filter-management-tutor>
-<app-table-management-tutor></app-table-management-tutor>
+<app-breadcrumb
+  [title]="'Comision Academic'"
+  [items]="['Home', 'Comision Academic']"
+  [active_item]="'Management Tutor'"
+>
+</app-breadcrumb>
+
+<div class="container-fluid basic_table">
+  <div class="row">
+    <div class="col-xxl-12 col-xl-12 box-cSol-12">
+      <div class="col-sm-12">
+        <div class="row mt-3">
+          <div class="col-12">
+            <div class="mb-sm-0">
+              <app-filter-management-tutor></app-filter-management-tutor>
+              <br />
+            </div>
+          </div>
+        </div>
+        <app-table-management-tutor></app-table-management-tutor>
+      </div>
+    </div>
+  </div>
+</div>
