--- a/src/app/pages/modalidad/components/tables/table-modalidad/table-modalidad.component.scss
+++ b/src/app/pages/modalidad/components/tables/table-modalidad/table-modalidad.component.scss
@@ -20,7 +20,7 @@
 .group-status-badge {
     padding: 0.25em 0.5em;
     border-radius: 0.25em;
-    color: #fff;
+    background-color: #739bec;
     font-weight: bold;
   }
   
