--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@
   background-color: #da3bda;
 }
 
-//posicion del filtro y de ñps modales de la tabla
+//posicion del filtro y de los modales de la tabla
 
 .card-header {
   display: flex;
