--- a/src/app/pages/user/components/tables/table-user/table-user.component.html
+++ b/src/app/pages/user/components/tables/table-user/table-user.component.html
@@ -1,6 +1,99 @@
-<shared-basic-table
-  [isLoading]="isLoading"
-  [tableColumns]="tableColumns"
-  [tableData]="tableData"
->
-</shared-basic-table>
+<div class="container-fluid basic_table">
+  <div class="row">
+    <div class="card">
+      <div class="card-header">
+        <div class="text-end">
+          <button
+            class="btn btn-sm btn-refresh me-3"
+            [disabled]="isLoading"
+            ngbTooltip="Recargar Tabla"
+            tooltipClass="custom-tooltip"
+            (click)="reloadTable()"
+          >
+            <i class="fas fa-sync-alt"></i>
+          </button>
+          <button
+            class="btn btn-sm btn-head btn-head-table me-3"
+            [disabled]="isLoading"
+            (click)="openModal()"
+          >
+            <i class="fa-solid fa-circle-plus"></i> Agregar Usuario
+          </button>
+        </div>
+      </div>
+
+      <div class="card-body custom-datatable noscroll">
+        <div class="table-responsive signal-table custom-datatable">
+          <table class="table table-hover table-responsive uppercase-table">
+            <thead>
+              <tr>
+                <th *ngFor="let column of tableColumns">{{ column.name }}</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody *ngIf="isLoading">
+              <tr>
+                <td colspan="8" class="text-center">
+                  <div class="loader-box">
+                    <div class="loader-16"></div>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+            <tbody *ngIf="!isLoading && tableData.length > 0">
+              <tr *ngFor="let user of tableData">
+                <td *ngFor="let column of tableColumns">{{ getPropertyValue(user, column.dataKey) }}</td>
+                <td>
+                  <div class="btn-group">
+                    <button
+                      class="btn btn-sm mt-2 btn-light"
+                      style="padding: 0.375rem 0.9rem"
+                      ngbTooltip="Editar"
+                      tooltipClass="custom-tooltip"
+                      (click)="openModal(user)"
+                    >
+                      <i class="fa-solid fa-pen-to-square"></i>
+                    </button>
+                    <button
+                      class="btn btn-sm mt-2 btn-light"
+                      style="padding: 0.375rem 0.9rem"
+                      ngbTooltip="Ver"
+                      tooltipClass="custom-tooltip"
+                      (click)="viewModal(user)"
+                    >
+                      <i class="fa-solid fa-eye"></i>
+                    </button>
+                    <button
+                      class="btn btn-sm btn-danger mt-2"
+                      style="padding: 0.375rem 0.9rem"
+                      ngbTooltip="Eliminar"
+                      tooltipClass="custom-tooltip"
+                      (click)="deleteUser(user._id)"
+                    >
+                      <i class="fa-solid fa-trash"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+            <tbody *ngIf="!isLoading && tableData.length === 0">
+              <tr>
+                <td colspan="8" class="text-center">
+                  No hay usuarios disponibles.
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="card-footer">
+        <shared-custom-pagination
+          [collectionSize]="tableData.length"
+          (pageChange)="onPageChange($event)"
+          (pageSizeChange)="onLimitChange($event)"
+        ></shared-custom-pagination>
+      </div>
+    </div>
+  </div>
+</div>
