--- a/src/app/pages/profile/pages/profile-detail/profile-detail.component.html
+++ b/src/app/pages/profile/pages/profile-detail/profile-detail.component.html
@@ -1,1 +1,19 @@
-<p>profile-detail works!</p>
+<div class="container-fluid basic_table">
+    <div class="row">
+      <div class="col-xxl-12 col-xl-12 box-cSol-12">
+        <div class="col-sm-12">
+            <!-- comento el codigo pq no se si se use filtro en esta etapa -->
+          <div class="row mt-3">
+            <div class="col-12">
+              <div class="mb-sm-0">
+                <!-- <app-filter-ejemplo></app-filter-ejemplo> -->
+                <br />
+              </div>
+            </div>
+          </div>
+          <app-user-info></app-user-info>
+        </div>
+      </div>
+    </div>
+  </div>
+  
