--- a/src/app/pages/modalidad/pages/page-modalidad/page-modalidad.component.html
+++ b/src/app/pages/modalidad/pages/page-modalidad/page-modalidad.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-xxl-12 col-xl-12 box-cSol-12">
         <div class="col-sm-12">
-            <!-- comento el codigo pq no se si se use filtro en esta etapa -->
+            <!-- comento el codigo pq no se si se use filtro en esta etapa por ahora... -->
           <div class="row mt-3">
             <div class="col-12">
               <div class="mb-sm-0">
