--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -24,9 +24,9 @@
             </svg>
           </div>
         </li>
-        <li class="onhover-dropdown">
+        <!-- <li class="onhover-dropdown">
           <app-notification></app-notification>
-        </li>
+        </li> -->
         <li class="profile-nav onhover-dropdown p-0">
           <app-my-account></app-my-account>
         </li>
