fix: creacion de modelo de inscripcion al taller de titulacion

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,8 +31,14 @@
   color: var(--primary-button-text-color) !important;
   border: none;
 }
-
+//tamaNo de los botones de acciones
 .btn-light {
+  padding: 0.375rem 0.9rem;
+}
+.btn-danger {
+  padding: 0.375rem 0.9rem;
+}
+.btn-success {
   padding: 0.375rem 0.9rem;
 }
 
