--- a/src/app/pages/user/components/tables/table-user/table-user.component.html
+++ b/src/app/pages/user/components/tables/table-user/table-user.component.html
@@ -46,7 +46,7 @@
                 <td>
                   <div class="btn-group">
                     <button
-                      class="btn btn-sm mt-2 btn-light"
+                      class="btn btn-sm btn-success mt-2"
                       style="padding: 0.375rem 0.9rem"
                       ngbTooltip="Editar"
                       tooltipClass="custom-tooltip"
